# attic-data

./: .gitignore  Makefile  a.html  product.json  pyproject.toml
attic_data/: scrape.py
attic_data/cmd/: generate_metadata.py  generate_queries.py  scrape_products.py  scrape_urls.py
attic_data/core/: constants.py  logging.py  proxy.py  request.py  utils.py
attic_data/scrapers/amazon/product/: __init__.py  description.py  media.py  price.py  seo.py  title.py
attic_data/scrappers/: product.py  product_price.py  product_title.py
attic_data/scrappers/amazon/: product.py  product_media.py  product_price.py  product_title.py
attic_data/scrappers/amazon/product/: __init__.py  description.py  title.py
attic_data/types/: product.py  scraper.py
attic_data/types/sink/: __init__.py  file.py  json.py  mongo.py  pipeline.py
data/: queries.txt
data/formats/: product_review.txt
developer/: categories.yaml  inventory.txt  product.txt  product_review_voters.txt  rough.txt  shipping.txt  todo.yml
outputs/products/: George-Winston-Piano-Sheet-Collection-ebook.json
