[tool.poetry]
name = "attic-data"
version = "0.1.0"
description = ""
authors = ["Yogesh Aggarwal <yogeshdevaggarwal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
undetected-chromedriver = "^3.5.5"
bs4 = "^0.0.2"
ollama = "^0.3.3"
lxml = "^5.3.0"
setuptools = "^75.1.0"
fake-useragent = "^1.5.1"
pydantic = "^2.9.2"
nanoid = "^2.0.0"
faker = "^30.3.0"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
generate_metadata = "attic_data.cmd.generate_metadata:main"
generate_queries = "attic_data.cmd.generate_queries:main"
scrape_urls = "attic_data.cmd.scrape_urls:main"
scrape_products = "attic_data.cmd.scrape_products:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
